frontend/tests/cases/positive/interfaces/simple/interface-simple-26.gr
-- instance of unit
interface Simple a where
  simple : a -> a

instance Simple () where
  simple x = x

simple1 : () -> ()
simple1 = simple
